--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/socket.io-client": "^3.0.0",
+    "bootstrap": "^4.5.0",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.4",
     "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
     "webpack": "^5.75.0",
